// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snaphot must match btn 1`] = `
<div>
  <button
    className="btn"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match link 1`] = `
<div>
  <a
    className="btn"
    href="#url"
    role="button"
  >
    Button
  </a>
</div>
`;
